@@ -60,6 +60,7 @@
 	- glibc2: permit run time leak detection.
 	- fix: removed files fingerprint memory leak.
 	- fix: resurrect allfiles flag from rpm-2.5.x.
+	- fix: version compares compatible with epoch-less requires/conflicts.
 
 3.0.1 -> 3.0.2
 	- eliminate armv4 entries from rpmrc (Andrew E. Mileski).
